--- a/GreenBowlFoodsSystem/Views/Users/Index.cshtml
+++ b/GreenBowlFoodsSystem/Views/Users/Index.cshtml
@@ -23,7 +23,7 @@
                     <tr>
                         <th class="ps-4">Username</th>
                         <th>Role</th>
-                        <th>Password <span class="text-muted fw-normal" style="font-size:0.7em">(Encrypted)</span></th>
+                        <th>Password <span class="text-white fw-normal" style="font-size:0.7em">(Encrypted)</span></th>
                         <th class="text-end pe-4">Actions</th>
                     </tr>
                 </thead>
