--- a/GreenBowlFoodsSystem/Views/Suppliers/Index.cshtml
+++ b/GreenBowlFoodsSystem/Views/Suppliers/Index.cshtml
@@ -41,17 +41,17 @@
                             </td>
                             <td>
                                 <span class="text-white">
-                                    <i class="bi bi-person me-1 text-muted"></i>
+                                    <i class="bi bi-person me-1 text-info"></i>
                                     @Html.DisplayFor(modelItem => item.ContactPerson)
                                 </span>
                             </td>
                             <td>
                                 <div class="d-flex flex-column small">
                                     <span class="text-white-50 mb-1">
-                                        <i class="bi bi-envelope me-2"></i>@Html.DisplayFor(modelItem => item.Email)
+                                        <i class="bi bi-envelope text-info me-2"></i>@Html.DisplayFor(modelItem => item.Email)
                                     </span>
                                     <span class="text-white-50">
-                                        <i class="bi bi-telephone me-2"></i>@Html.DisplayFor(modelItem => item.Phone)
+                                        <i class="bi bi-telephone text-info me-2"></i>@Html.DisplayFor(modelItem => item.Phone)
                                     </span>
                                 </div>
                             </td>
